Auth (giris/kayit, JWT), coklu kullanici sahiplik, Homie duzeltmeleri, Sensors internal sync, deployment hazirligi