@@ -46,3 +46,13 @@ Orijinal ödevde tek seviyeli ("premium penalty rate") bir ceza tanımlı. Ekip 
 - Her ek %20 aşımda bir kademe daha eklenir.
 
 > Not: Bu kural ödev PDF'inde yok, ekibin kendi eklediği bir geliştirme.
+
+## sensors modülünü çalıştırırken (not)
+
+`sensors` modülü Apache Ignite 2.x thin client kullanıyor. Bu kütüphane, JDK 11+'ta varsayılan olarak kapalı olan bazı düşük seviye JVM erişimlerine ihtiyaç duyuyor. Çalıştırırken `InaccessibleObjectException` alırsan, IntelliJ'de Run Configuration'ın **VM options** alanına şunu ekle:
+
+```
+--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.sql/java.sql=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.management/sun.management=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+```
+
+Bu, Apache Ignite'ın kendi JDK 11+ uyumluluk dokümantasyonunda önerdiği standart bayraklardır.
